--- a/style.css
+++ b/style.css
@@ -2,11 +2,16 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,500);
 @import url(https://fonts.googleapis.com/css?family=Montserrat);
 
+html {
+	height:100%;
+}
+
 body {
     /* This sets the default font family to Roboto everywhere */
     font-family: 'Roboto', sans-serif;
     background-color: #E3E4E5;/* #013440; */
     margin: 0;
+	height:100%;
 }
 
 h1, h2, h3, h4, h5, h6, strong {
@@ -16,22 +21,26 @@ h1, h2, h3, h4, h5, h6, strong {
     color: #666;/*#046380; */
 }
 
-pre, iframe {
-    width: 48%;
-    height: 800px;
+iframe {
     border: 0px;
-    float: left; 
     background-color: #FFF;
+	width:100%;
+	height:100%;
 }
 
 nav {
     background-color: #FFFFFF;
     margin: 0;
-    padding: 1em;
+    padding-bottom: 10px;
+	padding-top: 10px;
     width: 100%;
-    top: 0;
-    left: 0;
     height: 50px;
+	position:absolute;
+	top:0px;
+	left:0px;
+	right:0px;
+	/* This makes the shaddow get cast on other elements */
+	z-index:1000;
 }
 
 nav img.logo {
@@ -48,6 +57,39 @@ nav select {
     margin-left: 20px;
 }
 
+#tabdiv {
+	position:absolute;
+	top:70px;
+	left:0px;
+	width:50%;
+	height:48px;
+}
+
+.codediv {
+	background:#F5F2F0;
+	overflow:scroll;
+	padding:0px;
+	position:absolute;
+	width:50%;
+	top:118px;
+	left:0px;
+	bottom:0px;
+}
+
+.codediv div {
+	padding:5px;
+}
+
+#iframediv {
+	overflow:scroll;
+	padding:0px;
+	position:absolute;
+	width:50%;
+	top:70px;
+	right:0px;
+	bottom:0px;
+	overflow:hidden;
+}
 
 pre[class*='language-'] {
     margin: 0;
@@ -55,4 +97,3 @@ pre[class*='language-'] {
 pre[class*="language-"] > code[data-language] {
 	max-height: none;
 }
-
