--- a/examples/CSS_float.css
+++ b/examples/CSS_float.css
@@ -38,8 +38,11 @@ h1, h2, h3, h4, h5, h6, strong {
     float: left;
 }
 
+#about-me div:first-child {
+    width: 40%;
+    margin-right: 10%;
+}
+
 #about-me > div img {
-    height: 100%;
-    float: right;
-    padding-right: 10%;
+    width: 100%;
 }
